--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,16 +20,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    container:
+      image: redis/redis-stack:latest
     steps:
     - uses: actions/checkout@v3
-    - name: Docker Run Action
-    # You may pin to the exact commit or the version.
-    # uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185
-      uses: addnab/docker-run-action@v3
-      with:
-        # Image
-        image: redis/redis-stack:latest
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
