setting test defaults to localhost:6379

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: redis/redis-stack:latest
+      ports:
+        - 6379:6379
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
