switch to service

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,10 +20,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    container:
-      image: redis/redis-stack:latest
-      ports:
-        - 6379:6379
+    services:
+      redis:
+        image: redis/redis-stack:latest
+        ports:
+          - 6379:6379
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
