--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,3 +36,9 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: test
+    - name: JUnit Report Action
+      # You may pin to the exact commit or the version.
+      # uses: mikepenz/action-junit-report@6e9933f4a97f4d2b99acef4d7b97924466037882
+      uses: mikepenz/action-junit-report@v3.6.1
+      with:
+        report_paths: build/test-results/test/*.xml
