--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Run Tests
 
 on:
   push:
@@ -13,8 +13,6 @@ on:
   pull_request:
     branches: [ "master" ]
 
-permissions:
-  contents: write
 jobs:
   build:
 
